<resources>
    <string name="app_name">RoboGoGo Remote Control</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_Connect">Connect</string>
    <string name="text_Connecting">Connecting...</string>
    <string name="text_Connection_failed">Connection failed</string>
    <string name="text_Disconnected">Disconnected from device</string>
    <string name="text_please_connect">Please connect to an available robot:</string>
    <string name="action_update">Update</string>
    <string name="action_updating">Updating</string>
    <string name="text_refreshing_device">Refreshing Devices</string>
    <string name="text_searching">Searching for devices</string>
    <string name="text_device_name">Device name:</string>
    <string name="text_ip_address">Device MAC Address:</string>
    <string name="text_dialog_title">Connect to Device</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="text_info_dialog_title">Robot Info</string>
    <string name="text_ok">Ok</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_disconnect">Disconnect</string>
    <string name="text_help">Help</string>
    <string name="text_settings">Settings</string>
    <string name="text_device_info">Device Information</string>
    <string name="text_video_unavailable">Video feed not available</string>
    <string name="text_screenshot_saved">Screenshot saved to:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_control">ControlActivity</string>

    <string name="HelpText">
        This App will enable the user to control a Robot through WiFi-Direct.
        Furthermore the user will be able to recieve a camera stream on the Android device
        while controlling the robot. Finally the the user will be able to set specific settings
        on the Robot through the App.
        \n
        \n
        Using the Drawer Menu by swiping in from the right side of the phone or pushing the menu button,
        the user will be shown the choices to enter: \n\n
        1) Information \n
        In this menu the user will be shown information regarding the Robot such as - storagespace, MAC-address etc.\n\n
        2) Settings \n
        In this menu the user will be able to change specific settings on the robot and in the App.
        Settings could be changing - The Robot name, Video Quality, Driving modes, etc. \n\n
        3) Help \n
        You are currently reading this menu, which intents to inform you about the functionality of the App.\n\n
        4) Disconnect \n
        This Button ensures that the Android device and the Robot will be disconnected and the Android device
        WiFi-Direct module will be closed. The App will return to the Welcome/Connection menu to allow the user
        to connect to the same or a new Robot.\n\n

        If unexpected and undocumented troubles are experienced through using the App and the Robot
        please Contact the support to inform of the problems and hopefully we can help you.
    </string>
    <string name="text_camera_available">Camera Available:</string>
    <string name="text_storage_space">Storage space:</string>
    <string name="text_storage_remaining">Storage remaining:</string>
    <string name="text_button_to_control">Go to ControlActivity</string>
</resources>