<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:text="@string/text_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:id="@+id/tvDeviceName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDeviceNameHere"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="text"
        android:layout_below="@+id/tvDeviceName"
        android:layout_alignLeft="@+id/tvDeviceName"
        android:layout_alignStart="@+id/tvDeviceName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCameraYesNo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="text"
        android:layout_below="@+id/tvCameraAvailable"
        android:layout_alignLeft="@+id/tvDeviceName"
        android:layout_alignStart="@+id/tvDeviceName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvStorage"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/tvCameraYesNo"
        android:layout_alignLeft="@+id/tvDeviceNameHere"
        android:layout_alignStart="@+id/tvDeviceNameHere"
        android:text="@string/text_storage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvStorageHere"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="text"
        android:layout_below="@+id/tvStorage"
        android:layout_alignLeft="@+id/tvDeviceName"
        android:layout_alignStart="@+id/tvDeviceName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/tvDeviceNameHere"
        android:layout_alignLeft="@+id/tvDeviceNameHere"
        android:layout_alignStart="@+id/tvDeviceNameHere"
        android:text="@string/text_ip_address" />

    <TextView
        android:text="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvIpAddressHere"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/tvAddress"
        android:layout_alignLeft="@+id/tvAddress"
        android:layout_alignStart="@+id/tvAddress" />

    <TextView
        android:text="@string/text_camera_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/tvCameraAvailable"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/tvIpAddressHere"
        android:layout_alignLeft="@+id/tvIpAddressHere"
        android:layout_alignStart="@+id/tvIpAddressHere" />

</RelativeLayout>